# Arduino-CMake-Toolchain

./: Arduino-toolchain.cmake  CHANGELOG.md  LICENSE.md  README.md  index.html
Arduino/PackageManager/: BoardsManager.cmake
Arduino/System/: BoardBuildTargets.cmake  BoardToolchain.cmake  BoardsIndex.cmake  DetectInstalledLLVMVersion.cmake  DetectLibgccVersion.cmake  GCCOptionsParser.cmake  LibraryIndex.cmake  PackageIndex.cmake  PackagePathIndex.cmake  PlatformIndex.cmake
Arduino/Templates/: ArduinoSystem.cmake.in  BoardOptions_BoardSel.cmake.in  BoardOptions_MenuHeader.cmake.in  BoardOptions_ProgHeader.cmake.in  BoardOptions_ProgSel.cmake.in  ExecuteRecipe.cmake.in  FirmwareSizePrint.cmake.in  FirmwareUpload.cmake.in
Arduino/Templates/BoardOptions/: BoardHeader.cmake.in  BoardSel.cmake.in  FileHeader.cmake.in  MenuBoardHdr.cmake.in  Menuoption.cmake.in  ProgHeader.cmake.in  ProgSel.cmake.in
Arduino/Templates/Scripts/: BuildRuleScript.cmake.in  LinkScript.cmake.in  SizeScript.cmake.in  ToolScript.cmake.in
Arduino/Utilities/: CommonUtils.cmake  JSONParser.cmake  PropertiesReader.cmake  SourceDependency.cmake  SourceLocator.cmake
Examples/: CMakeLists.txt  README.md
Examples/01_hello_world/: CMakeLists.txt  README.md  hello_world.cpp
Examples/02_arduino_lib/: CMakeLists.txt  README.md
Examples/02_arduino_lib/libraries/local_lib/: library.properties  local_lib.cpp  local_lib.h
Examples/03_portable_app/: CMakeLists.txt  README.md  portable_app.cpp
Examples/03_portable_app/abstraction/app_entry/: CMakeLists.txt  app_entry.h
Examples/03_portable_app/abstraction/app_stdio/: CMakeLists.txt  app_stdio.cpp  app_stdio.h
Examples/04_multi_app/: CMakeLists.txt  README.md  app1.cpp
Examples/05_auto_link/: CMakeLists.txt  README.md  auto_link_custom.cpp  auto_link_lib.cpp
Platform/: Arduino-Determine.cmake  Arduino.cmake
Tests/: CMakeLists.txt  CTestConfig.cmake  PreparePlTestResults.cmake  PrepareTestResults.cmake  RunBoardTest.cmake  RunPlatformTest.cmake  RunTestWrapper.bat  RunTestWrapper.sh  RunTestsCommon.ctest  RunUnixTests.ctest  board_mgr_url_list.txt  skipped_tests.cmake
Tests/Templates/SupportedBoards/: BoardInfo.cmake.in  FailBoardItem.html.in  FailBoardItem.md.in  FailPlEntry.html.in  FailPlEntry.md.in  FailToolItem.html.in  FailToolItem.md.in  SkipBoardItem.html.in  SkipBoardItem.md.in  SkipPlEntry.html.in  SkipPlEntry.md.in  SkipToolItem.html.in  SkipToolItem.md.in  SuppBoardItem.html.in  SuppBoardItem.md.in  SuppPlEntry.html.in  SuppPlEntry.md.in  SuppToolItem.html.in  SuppToolItem.md.in  TblHdr.md.in  UnexpectedOptions.html.in  UnexpectedOptions.md.in  UnsuppTool.html.in  UnsuppTool.md.in
Tests/Templates/TestResults/: BoardInfo.cmake.in  BoardsTblEntry.md.in  BoardsTblHdr.md.in  PlatformInfo.cmake.in  PlatformTblEntry.md.in  PlatformTblHdr.md.in
Tests/UnitTests/: BoardsManagerTest.cmake  PropertiesReaderTest.cmake
